--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-9 text-right lg-left-border">
+        <div class="col-lg-12 text-right">
             <div class="project-info-tabs">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                      aria-orientation="vertical">
@@ -617,7 +617,7 @@
             {#                    </div>#}
             {#                {% endfor %}#}
         </div>
-        <div class="col-lg-3">col-lg-3</div>
+{#        <div class="col-lg-3">col-lg-3</div>#}
     </div>
     <a href="#top" class="top-button">
         <i class="fas fa-angle-up"></i>
