--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-9 text-right lg-left-border">
+        <div class="col-lg-12 text-right">
             {% for project in projects %}
                 {% if project.status == 0 %}
                     <div class="card box flow-root-display w-100">
@@ -323,6 +323,6 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="col-lg-3"></div>
+{#        <div class="col-lg-3"></div>#}
     </div>
 {% endblock %}
