--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-9 text-right lg-left-border">
+        <div class="col-lg-12 text-right">
             <div class="project-info-tabs">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                      aria-orientation="vertical">
@@ -65,72 +65,72 @@
                     </div>
                 {% endfor %}
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="tab-content cover-page" style="display: flex;">
-                        {% for project in new_project_list %}
-                            <div class="card project-item w-100">
-                                <span class="header">{{ project.project_title }} <span
-                                        class="sub-header">( {{ project.started }} قبل )</span></span>
-                                <span>
-
-                            {% for keyword in project.keyword %}
-                                <span class="border-span">{{ keyword.name }}</span>
-                            {% endfor %}
-                        </span>
-                                <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
-                                <span><i
-                                        class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>
-                                <button type="button" class="chamran-btn-info" id="{{ project.PK }}">مشاهده</button>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <div class="tab-content your-project" style="display: none;">
-                        {% if my_project_list == "None" %}
-                            <p>پروژه فعالی برای شما ثبت نشده است.</p>
-                        {% else %}
-                            {% for project in my_project_list %}
-                                <div class="card project-item">
-                                    <span class="header">{{ project.project_title }} <span
-                                            class="sub-header">( {{ project.started }} قبل )</span></span>
-                                    <span>
-                            {% for keyword in project.keyword %}
-                                <span class="border-span">{{ keyword.name }}</span>
-                            {% endfor %}
-                        </span>
-                                    <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
-                                    <span><i
-                                            class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>
-                                    <button type="button" class="chamran-btn-info my-project" value="myproject"
-                                            id="{{ project.PK }}">مشاهده
-                                    </button>
-                                </div>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="tab-content done-project" style="display: none;">
-                        {% for project in done_project_list %}
-                            <div class='card project-item'>
-                                <span class='header'>{{ project.project_title }}<span
-                                        class='sub-header'> ({{ project.started }} قبل )</span></span>
-                                <span><i
-                                        class='fas fa-calendar-alt'></i>این پروژه به در تاریخ  <span>{{ project.date_started }}</span> شروع شده است.</span>
-                                <span><i
-                                        class='fas fa-calendar-alt'></i>این پروژه به در تاریخ  <span>{{ project.date_finished }}</span> به پایان رسیده است.</span>
-                                <span><i
-                                        class='fas fa-hourglass-end'></i>مدت زمان پروژه : <span> {{ project.delta_date }} </span></span>
-                                <span><i
-                                        class='fas fa-hourglass-end'></i>درأمد : <span> {{ project.income }} </span> کسب کرده اید.</span>
-                                <span><i class='fas fa-hourglass-end'></i>تکنیک های مورد استفاده :
-                                    {% for technique in project.technique %}
-                                        <span> {{ technique }} , </span>
-                                    {% endfor %}
-                    </span>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
+{#            <div class="row">#}
+{#                <div class="col-lg-12">#}
+{#                    <div class="tab-content cover-page" style="display: flex;">#}
+{#                        {% for project in new_project_list %}#}
+{#                            <div class="card project-item w-100">#}
+{#                                <span class="header">{{ project.project_title }} <span#}
+{#                                        class="sub-header">( {{ project.started }} قبل )</span></span>#}
+{#                                <span>#}
+{##}
+{#                            {% for keyword in project.keyword %}#}
+{#                                <span class="border-span">{{ keyword.name }}</span>#}
+{#                            {% endfor %}#}
+{#                        </span>#}
+{#                                <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>#}
+{#                                <span><i#}
+{#                                        class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>#}
+{#                                <button type="button" class="chamran-btn-info" id="{{ project.PK }}">مشاهده</button>#}
+{#                            </div>#}
+{#                        {% endfor %}#}
+{#                    </div>#}
+{#                    <div class="tab-content your-project" style="display: none;">#}
+{#                        {% if my_project_list == "None" %}#}
+{#                            <p>پروژه فعالی برای شما ثبت نشده است.</p>#}
+{#                        {% else %}#}
+{#                            {% for project in my_project_list %}#}
+{#                                <div class="card project-item">#}
+{#                                    <span class="header">{{ project.project_title }} <span#}
+{#                                            class="sub-header">( {{ project.started }} قبل )</span></span>#}
+{#                                    <span>#}
+{#                            {% for keyword in project.keyword %}#}
+{#                                <span class="border-span">{{ keyword.name }}</span>#}
+{#                            {% endfor %}#}
+{#                        </span>#}
+{#                                    <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>#}
+{#                                    <span><i#}
+{#                                            class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>#}
+{#                                    <button type="button" class="chamran-btn-info my-project" value="myproject"#}
+{#                                            id="{{ project.PK }}">مشاهده#}
+{#                                    </button>#}
+{#                                </div>#}
+{#                            {% endfor %}#}
+{#                        {% endif %}#}
+{#                    </div>#}
+{#                    <div class="tab-content done-project" style="display: none;">#}
+{#                        {% for project in done_project_list %}#}
+{#                            <div class='card project-item'>#}
+{#                                <span class='header'>{{ project.project_title }}<span#}
+{#                                        class='sub-header'> ({{ project.started }} قبل )</span></span>#}
+{#                                <span><i#}
+{#                                        class='fas fa-calendar-alt'></i>این پروژه به در تاریخ  <span>{{ project.date_started }}</span> شروع شده است.</span>#}
+{#                                <span><i#}
+{#                                        class='fas fa-calendar-alt'></i>این پروژه به در تاریخ  <span>{{ project.date_finished }}</span> به پایان رسیده است.</span>#}
+{#                                <span><i#}
+{#                                        class='fas fa-hourglass-end'></i>مدت زمان پروژه : <span> {{ project.delta_date }} </span></span>#}
+{#                                <span><i#}
+{#                                        class='fas fa-hourglass-end'></i>درأمد : <span> {{ project.income }} </span> کسب کرده اید.</span>#}
+{#                                <span><i class='fas fa-hourglass-end'></i>تکنیک های مورد استفاده :#}
+{#                                    {% for technique in project.technique %}#}
+{#                                        <span> {{ technique }} , </span>#}
+{#                                    {% endfor %}#}
+{#                    </span>#}
+{#                            </div>#}
+{#                        {% endfor %}#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
         </div>
         {#            <!-- {% for com in comments %}#}
         {#        <div class="your-comment">#}
@@ -146,7 +146,7 @@
         {#                </div>#}
         {#            </div>#}
         {#    {% endfor %} -->#}
-        <div class="col-lg-3"></div>
+{#        <div class="col-lg-3"></div>#}
     </div>
     <a href="#top" class="top-button">
         <i class="fas fa-angle-up"></i>
