--- a/researcher/templates/researcher/layouts/initial_information.html
+++ b/researcher/templates/researcher/layouts/initial_information.html
@@ -13,9 +13,18 @@
                         </label>
                         <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="profile"
                              width="150px" height="150px">
-                        <input type="file" id="upload-input" name="photo" accept="image/png, image/jpeg">
+                        {{ form.photo|attr:"id:upload-input"| attr:"accept: image/png, image/jpeg" }}
+                        <div class="col-lg-7 text-center">    
+                            <div class="error">
+                                <span class="error-body">{% render_field form.photo.errors %} </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                
+                {% if form.photo.errors %}
+                    <div class="row"><div class="col-lg-12"> <br></div></div>
+                {% endif %}
                 <div class="row">
                     <div class="col-md-6">
                         <label for="FirstName">نام</label>
