--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -27,7 +27,7 @@
             <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
                 <img
                         {% if user.industryuser.industryform.photo %}
-                            src="/media/{{ user.industryuser.industryform.photo.name }}"
+                            src="{{ user.industryuser.industryform.photo.url }}"
                         {% else %}
                             src="{% static 'industry/img/profile.jpg' %}"
                         {% endif %}
@@ -61,7 +61,7 @@
         <div class="expert-icon"></div>
         <img
                 {% if user.industryuser.industryform.photo %}
-                    src="/media/{{ user.industryuser.industryform.photo.name }}"
+                    src="{{ user.industryuser.industryform.photo.url }}"
                 {% else %}
                     src="{% static 'industry/img/profile.jpg' %}"
                 {% endif %}
